# clipforge

./: .gitignore  README.md  index.html  package-lock.json  package.json  tauri-override.json
.claude/: launch.json
scripts/: dev.ps1  install.ps1  release.ps1
src/: App.css  App.tsx  panels.tsx  tauri-shim.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autoclip.rs  clips.rs  fullscreen.rs  lib.rs  obs.rs  setup.rs  supervisor.rs
src-tauri/windows/: hooks.nsi  install-obs.ps1
