[package]
name = "clipforge"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
obws = { version = "0.15.0", features = ["events"] }
tokio = { version = "1.52.3", features = ["full"] }
tauri-plugin-global-shortcut = "2.3.2"
futures-util = "0.3.32"
trash = "5.2.6"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Foundation", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Media_Audio", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Ole", "Win32_UI_Shell"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2.3.3"
notify = "8.2.0"
tauri-plugin-single-instance = "2.4.2"
regex = "1.13.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "native-tls"] }
sysinfo = { version = "0.39.6", default-features = false, features = ["system"] }


[profile.release]
# Management-layer app: nothing CPU-hot lives here (OBS/ffmpeg do the work),
# so optimize for size — faster download, less RAM, better cache locality.
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
